# offline-video-caption-annotator

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.txt  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  workspace-preview.html
.github/workflows/: macos-release.yml  windows-portable.yml
scripts/: setup-rust.sh  with-rust.sh
scripts/macos/: build-libmpv.sh  check-libmpv-dlopen.py  libmpv-runtime.json  libmpv-smoke.c  smoke-libmpv.sh
scripts/macos/patches/: mpv-0.41.0-coreaudio-utils.patch
scripts/windows/: package-portable.ps1  prepare-webview2.ps1  webview2-runtime.json  使用说明.txt  启动视频剧情标注.cmd
src/: App.test.tsx  App.tsx  export-message.ts  styles.css  workspace-preview.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.mpv-preview.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: mpv_bridge.h  mpv_bridge.m
src-tauri/src/: lib.rs  main.rs  media.rs  mpv.rs
src/components/: AnnotationWorkspace.test.tsx  AnnotationWorkspace.tsx  ProfileDialog.tsx  ProjectDashboard.test.tsx  ProjectDashboard.tsx
src/domain/: annotation.test.ts  annotation.ts  types.ts
src/media/: mpv-client.ts
src/release/: macos-release.test.ts  windows-distribution.test.ts
src/storage/: project-storage.test.ts  project-storage.ts
src/store/: app-store.test.ts  app-store.ts
src/test/: caption-fixture.ts  setup.ts
